--- a/Ab.css
+++ b/Ab.css
@@ -51,6 +51,15 @@ a {
 
 }
 
+Link {
+  text-decoration: none;
+  font-size: 8px;
+  color: black;
+
+  font-family: 'Speda-Bold';
+
+}
+
 button:hover, a:hover {
   opacity: 0.7;
 }
