--- a/Ab.css
+++ b/Ab.css
@@ -53,8 +53,8 @@ a {
 
 Link {
   text-decoration: none;
-  font-size: 8px;
-  color: black;
+  font-size: 15px;
+  color: #C70039;
 
   font-family: 'Speda-Bold';
 
