--- a/Ab.css
+++ b/Ab.css
@@ -44,8 +44,8 @@ button {
 
 a {
   text-decoration: none;
-  font-size: 8px;
-  color: black;
+  font-size: 18px;
+  color:  #C70039;
 
   font-family: 'Speda-Bold';
 
